@@ -26,3 +26,33 @@
 	-moz-appearance: statusbar;
 }
 
+#status4evar-download-button #status4evar-download-icon
+{
+	background: -moz-image-rect(url("chrome://browser/skin/Toolbar.png"), 0, 198, 18, 180) center no-repeat;
+	min-width: 18px;
+	min-height: 18px;
+}
+
+#status4evar-download-button:-moz-lwtheme-brighttext #status4evar-download-icon
+{
+	background: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"), 0, 198, 18, 180) center no-repeat;
+}
+
+@media (min-resolution: 2dppx)
+{
+	#status4evar-download-button #status4evar-download-icon
+	{
+		background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar@2x.png"), 0, 396, 36, 360);
+	}
+
+	#status4evar-download-button:-moz-lwtheme-brighttext #status4evar-download-icon
+	{
+		background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted@2x.png"), 0, 396, 36, 360);
+	}
+
+	#status4evar-download-button[attention] #status4evar-download-icon
+	{
+		background-image: url("chrome://browser/skin/downloads/download-glow@2x.png");
+	}
+}
+
