@@ -1,4 +1,5 @@
 Version next
+* Fix download button icon styles (Australis)
 
 Version 2014.04.27.21
 * Fix toolbars overlapping download finished animation.
